# real_rusty_gam

./: Cargo.toml  IMPROVEMENTS.md  Makefile  PYTHON_USAGE.md  README.md  pyproject.toml
.github/workflows/: rust.yml
benches/: derivatives.rs
benchmark/: Cargo.toml  run_comparison.sh
docs/: mathematics.md
examples/: gamlss_fit.rs
src/: diagnostics.rs  distributions.rs  error.rs  families.rs  fitting.rs  lib.rs  linalg.rs  math.rs  python.rs  splines.rs  terms.rs  types.rs  wasm.rs
src/fitting/: assembler.rs  inference.rs  mod.rs  solver.rs
src/preprocessing/: mod.rs
tests/: comprehensive.rs  diagnostics.rs  edge_cases.rs  parameter_recovery.rs  prediction.rs  r_validation.rs  validation.rs
tests/common/: mod.rs
tests/fixtures/: beta_linear.json  gamma_linear.json  gamma_smooth.json  gaussian_heteroskedastic.json  gaussian_linear.json  gaussian_smooth.json  negative_binomial_linear.json  poisson_linear.json  poisson_smooth.json  studentt_linear.json
