[package]
name = "gamlss_rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["openblas", "parallel"]

# Backend selection (mutually exclusive in practice)
openblas = ["ndarray-linalg"]
pure-rust = ["faer"]

# WASM target (implies pure-rust, no parallel)
wasm = ["pure-rust", "wasm-bindgen", "serde", "serde_json"]

# Parallelism (incompatible with WASM)
parallel = ["rayon"]

[dependencies]
argmin = { version = "0.11.0"}
ndarray = { version = "0.16" }
rand = { version = "0.9.2" }
rand_distr = { version = "0.5.1" }
statrs = { version = "0.18.0" }
thiserror = { version = "2.0.18" }

# Optional: Linear algebra backends
ndarray-linalg = { version = "0.17.0", features = ["openblas-system"], optional = true }
faer = { version = "0.19", default-features = false, optional = true }

# Optional: Parallelism
rayon = { version = "1.11.0", optional = true }

# Optional: WASM support
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dependencies.argmin-math]
version = "0.5.1"
features = ["ndarray_v0_16"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "derivatives"
harness = false