[package]
name = "gamlss_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["openblas", "parallel"]

# Backend selection (mutually exclusive in practice)
openblas = ["ndarray-linalg", "argmin-math/ndarray_v0_16"]
pure-rust = ["faer"]

# Serialization support (serde + ndarray/serde)
serialization = ["serde", "serde_json", "ndarray/serde"]

# WASM target (implies pure-rust + serialization, no parallel)
wasm = ["pure-rust", "serialization", "wasm-bindgen", "getrandom/wasm_js"]

# Parallelism (incompatible with WASM)
parallel = ["rayon"]

[dependencies]
argmin = { version = "0.11.0"}
ndarray = { version = "0.16" }
rand = { version = "0.9.2" }
rand_distr = { version = "0.5.1" }
statrs = { version = "0.18.0" }
thiserror = { version = "2.0.18" }

# Optional: Linear algebra backends
ndarray-linalg = { version = "0.17.0", features = ["openblas-system"], optional = true }
faer = { version = "0.19", default-features = false, optional = true }

# Optional: Parallelism
rayon = { version = "1.11.0", optional = true }

# Optional: Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Optional: WASM support
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.3", optional = true }

[dependencies.argmin-math]
version = "0.5.1"
features = ["ndarray_v0_16-nolinalg"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "derivatives"
harness = false