[package]
name = "gamlss_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["openblas", "parallel"]

# Backend selection (mutually exclusive in practice)
openblas = ["ndarray-linalg", "argmin-math/ndarray_latest"]
pure-rust = ["faer", "argmin-math/faer_latest"]

# Serialization support (serde + ndarray/serde)
serialization = ["serde", "serde_json", "ndarray/serde"]

# WASM target (implies pure-rust + serialization, no parallel)
wasm = ["pure-rust", "serialization", "wasm-bindgen", "getrandom_02", "getrandom_03", "getrandom"]

# PyO3 Integration (includes openblas backend + parallel for performance)
python = ["pyo3", "numpy", "serialization", "openblas", "parallel"]

# Parallelism (incompatible with WASM)
parallel = ["rayon"]

[dependencies]
argmin = { version = "0.11.0"}
ndarray = { version = "0.17" }
rand = { version = "0.10" }
rand_distr = { version = "0.6" }
statrs = { version = "0.18.0" }
thiserror = { version = "2.0" }

# Optional: Linear algebra backends
ndarray-linalg = { version = "0.18", features = ["openblas-system"], optional = true }
faer = { version = "0.24", default-features = false, optional = true }

# Optional: Parallelism
rayon = { version = "1.11", optional = true }

# Optional: Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Optional: WASM support
wasm-bindgen = { version = "0.2.108", optional = true }

# getrandom is a transitive dependency, but we explicitly depend on it to ensure
# the correct features are enabled for WASM builds
# Multiple versions needed due to transitive dependencies:
#   v0.2 from statrs → nalgebra → rand 0.8
#   v0.3 from argmin → rand 0.9
#   v0.4 from our direct rand 0.10 dependency
getrandom_02 = { package = "getrandom", version = "0.2", optional = true, features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", optional = true, default-features = false, features = ["wasm_js"] }
getrandom = { version = "0.4", optional = true, default-features = false, features = ["wasm_js"] }

# Optional: PyO3
# Note: extension-module is used for building Python modules, but not for running tests
# When testing, PyO3 needs to link to Python. For this, we rely on pyo3/auto-initialize in dev-dependencies
pyo3 = { version = "0.28.0", features = ["extension-module"], optional = true }
numpy = { version = "0.28.0", optional = true }

[dependencies.argmin-math]
version = "0.5.1"
features = ["ndarray_latest-nolinalg"]

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "derivatives"
harness = false

[workspace]
members = ["benchmark"]
