[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gamlss-rs"
version = "0.1.0"
description = "Python bindings for the gamlss_rs library - GAMLSS (Generalized Additive Models for Location, Scale, and Shape)"
readme = "PYTHON_USAGE.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["statistics", "regression", "gamlss", "generalized-additive-models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.0",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "gamlss_rs"
